91: upgraded httpclient version