@@ -2,6 +2,8 @@ package org.wiztools.restclient.util;
 
 import java.net.IDN;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -11,12 +13,14 @@ import java.net.URL;
 public final class IDNUtil {
     public static URL getIDNizedURL(URL inUrl) throws IllegalArgumentException {
         try {
-            return new URL(inUrl.getProtocol(),
+            return new URI(inUrl.getProtocol(),
+                "",
                 IDN.toASCII(inUrl.getHost()),
                 inUrl.getPort(),
-                inUrl.getFile());
-        }
-        catch(MalformedURLException ex) {
+                inUrl.getFile(), "", "").toURL();
+        } catch(MalformedURLException ex) {
+            throw new IllegalArgumentException(ex);
+        } catch(URISyntaxException ex) {
             throw new IllegalArgumentException(ex);
         }
     }
